@@ -1,3 +1,8 @@
+Mon Apr 12 18:29:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/Connector_Servant_Impl_Base.cpp (remove):
+          Reworked to work with LwCCM
+
 Mon Apr 12 18:15:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Servants/Servant_Impl_Base.cpp:
